sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: value echangeFait
		echangeFait=false
                ^AlgBubbleSort2:8: error: not found: value echangeFait
				echangeFait=true
                                ^